Fix overflow orizzontale su mobile
- Cambiato width: 100vw in 100% per HamburgerMenu, Footer e Modal
- Aggiunto overflow-x: hidden all'html
- Risolve il problema dello swipe che mostra margine a destra

--- a/my-portfolio/src/components/footer/index.module.scss
+++ b/my-portfolio/src/components/footer/index.module.scss
@@ -3,7 +3,7 @@
 .Footer {
   box-sizing: border-box;
   height: 30px;
-  width: 100vw;
+  width: 100%;
 
   bottom: 0;
   left: 0;
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
