--- a/my-portfolio/src/components/hamburgerMenu/index.module.scss
+++ b/my-portfolio/src/components/hamburgerMenu/index.module.scss
@@ -2,7 +2,7 @@
 
 .HamburgerMenu {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   top: 0;
   right: 0;
